# ggine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
shaders/: triangle.hlsl
src/: Engine.cpp  Engine.h  ObjLoader.cpp  ObjLoader.h  Renderer.h  Scene.h  main.cpp
